# portage-fuseon

./: .gitignore  CLAUDE.md  README.md  TASKS.md  pyproject.toml  test_dependency_listing.py  test_filesystem.py
docs/: build-error-fixes.md  dependency-patching.md  rubygems.md
portage_pip_fuse/: __init__.py  cli.py  constants.py  dependency_patch.py  ebuild_append_patch.py  filesystem.py  git_provider.py  git_source_patch.py  hybrid_metadata.py  interrupt.py  iuse_patch.py  name_translation_patch.py  name_translator.py  package_filter.py  pep517_patch.py  pip_metadata.py  plugin.py  prefetcher.py  source_provider.py  sqlite_metadata.py  version_filter.py
portage_pip_fuse/ecosystems/: __init__.py
portage_pip_fuse/ecosystems/pypi/: __init__.py  plugin.py
portage_pip_fuse/ecosystems/rubygems/: __init__.py  cli.py  filesystem.py  filters.py  gemfile_parser.py  name_translator.py  plugin.py  source_provider.py
tests/: test_filesystem.py  test_git_provider.py  test_git_source_patch.py  test_name_translator.py  test_pip_metadata.py  test_rubygems_filesystem.py  test_source_provider.py
